--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -2,7 +2,6 @@
 layout: page
 # The Archives of posts.
 ---
-
 {% include lang.html %}
 
 {% assign df_strftime_m = site.data.locales[lang].df.archives.strftime | default: '/ %m' %}
@@ -33,3 +32,5 @@ layout: page
     {% if forloop.last %}</ul>{% endif %}
   {% endfor %}
 </div>
+
+<h1 class="dynamic-title">FTP</h1>
