--- a/_includes/head.html
+++ b/_includes/head.html
@@ -97,6 +97,12 @@
     <link rel="stylesheet" href="{{ site.data.origin[type].glightbox.css | relative_url }}">
   {% endif %}
 
+  {% if page.custom_css %}
+    {% for css in page.custom_css %}
+      <link rel="stylesheet" href="{{ css | relative_url }}">
+    {% endfor %}
+  {% endif %}
+
   <!-- JavaScript -->
 
   {% unless site.theme_mode %}
