--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -149,7 +149,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
           </p>
           <p class="text-lg text-gray-600 mt-8 leading-relaxed">
             읽어주셔서 감사합니다.<br />
-            오늘 하루가 조금 더 편안해지길 바랍니다.
+            오늘 하루가 조금 더 편안해지길 바랍니다.<br /><br /><br />
           </p>
           <p class="text-xl font-bold text-brand mt-6">
             서울대 윤원장의 치과사전<br />
